--- a/web/src/app/components/HomeScreen/UsersSection.scss
+++ b/web/src/app/components/HomeScreen/UsersSection.scss
@@ -16,9 +16,7 @@
       }
     }
 
-    // TODO: Remove :hover
-    &:focus,
-    &:hover {
+    &:focus {
       outline: none;
 
       .user-icon {
