--- a/web/src/app/shared/components/Card/Card.scss
+++ b/web/src/app/shared/components/Card/Card.scss
@@ -4,6 +4,5 @@
   justify-content: center;
   width: $card-width;
   height: $card-height;
-  margin: 0 auto;
-  background-color: $card-bg-color;
+  background: $broken-image-background;
 }
