--- a/web/src/app/components/HomeScreen/UsersSection.scss
+++ b/web/src/app/components/HomeScreen/UsersSection.scss
@@ -1,7 +1,7 @@
 .users {
   display: grid;
-  grid-template-rows: repeat(auto-fill, minmax(36px, 36px));
-  grid-template-columns: repeat(auto-fill, minmax(36px, 36px));
+  grid-template-rows: repeat(auto-fill, $users-grid-template-rows-size);
+  grid-template-columns: repeat(auto-fill, $users-grid-template-columns-size);
   gap: $users-gap;
   width: $users-width;
   height: $users-height;
@@ -36,7 +36,11 @@
       height: $user-icon-height;
       padding: $user-icon-padding;
       border: $user-icon-border-width solid $user-icon-border-color;
-      border-radius: $user-icon-border-radius;
+      @include border-radius;
+
+      &.shake-animation {
+        @include shaking-border-animation;
+      }
     }
 
     .user-name {
