--- a/web/src/app/components/LockScreen/LockScreen.scss
+++ b/web/src/app/components/LockScreen/LockScreen.scss
@@ -6,7 +6,9 @@
     position: relative;
     display: grid;
     grid-template-rows: 1fr max-content;
-    height: $screen-section-height;
-    transition: width .1s linear;
+    align-items: center;
+    justify-content: center;
+    @include transition(width .1s linear);
+    box-sizing: border-box;
   }
 }
