Made adjustments to lockscreen, mostly

--- a/web/src/app/components/LockScreen/FeaturedNewsSection.scss
+++ b/web/src/app/components/LockScreen/FeaturedNewsSection.scss
@@ -18,6 +18,7 @@
       grid-auto-flow: column;
       gap: $lock-screen-featured-news-list-gap-expanded;
       justify-content: center;
+      padding: $lock-screen-featured-news-list-padding-expanded;
     }
   }
 
