--- a/web/src/app/shared/components/Card/Card.scss
+++ b/web/src/app/shared/components/Card/Card.scss
@@ -5,4 +5,8 @@
   width: $card-width;
   height: $card-height;
   background: $broken-image-background;
+
+  .card__title {
+    background-color: $card-title-bg-color;
+  }
 }
