--- a/web/src/styles/_fonts.scss
+++ b/web/src/styles/_fonts.scss
@@ -2,48 +2,48 @@
   font-family: 'FOT-Rodin NTLG Pro';
   font-style: normal;
   font-weight: 300;
-  src: url('~fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Light.otf');
+  src: url('@fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Light.otf');
 }
 
 @font-face {
   font-family: 'FOT-Rodin NTLG Pro';
   font-style: normal;
   font-weight: 400;
-  src: url('~fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Medium.otf');
+  src: url('@fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Medium.otf');
 }
 
 @font-face {
   font-family: 'FOT-Rodin NTLG Pro';
   font-style: normal;
   font-weight: 500;
-  src: url('~fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Medium.otf');
+  src: url('@fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Medium.otf');
 }
 
 @font-face {
   font-family: 'FOT-Rodin NTLG Pro';
   font-style: normal;
   font-weight: 600;
-  src: url('~fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Semi-Bold.otf');
+  src: url('@fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Semi-Bold.otf');
 }
 
 @font-face {
   font-family: 'FOT-Rodin NTLG Pro';
   font-style: normal;
   font-weight: 700;
-  src: url('~fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Bold.otf');
+  src: url('@fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Bold.otf');
 }
 
 @font-face {
   font-family: 'FOT-Rodin NTLG Pro';
   font-style: normal;
   font-weight: 800;
-  src: url('~fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Extra-Bold.otf');
+  src: url('@fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Extra-Bold.otf');
 }
 
 @font-face {
   font-family: 'FOT-Rodin NTLG Pro';
   font-style: normal;
   font-weight: 900;
-  src: url('~fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Extra-Black.otf');
+  src: url('@fonts/FOT-Rodin-NTLG-Pro/FOT-Rodin-NTLG-Pro-Extra-Black.otf');
 }
 
